--- a/part3_explainability/fairness.ipynb
+++ b/part3_explainability/fairness.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2a9d08ef",
    "metadata": {},
    "outputs": [],
@@ -97,11 +97,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b5fab97f",
+   "metadata": {},
+   "source": [
+    "### 🔍 1. Analyse des caractéristiques (*features*) disponibles\n",
+    "\n",
+    "Le dataset contient des informations à la fois **démographiques** et **judiciaires** sur des individus. Voici une description des principales colonnes :\n",
+    "\n",
+    "- `priors_count` : nombre d'antécédents judiciaires (variable quantitative).\n",
+    "- `sex_Female` et `sex_Male` : représentation binaire du sexe à l'aide du **one-hot encoding**.\n",
+    "- `age_cat_25 - 45`, `age_cat_Greater than 45`, `age_cat_Less than 25` : catégories d'âge encodées en binaire.\n",
+    "- `race_African-American`, `race_Asian`, `race_Caucasian`, `race_Hispanic`, `race_Native American`, `race_Other` : appartenance ethnique, également encodée via one-hot encoding.\n",
+    "\n",
+    "> ⚠️ On remarque que toutes les variables catégorielles (sexe, âge, race) ont été transformées en variables binaires à l’aide du **one-hot encoding**. Cela permet une meilleure prise en charge par les algorithmes de machine learning.\n",
+    "\n",
+    "\n",
+    "### 🎯 2. Variable cible (*target*)\n",
+    "La variable cible est :\n",
+    "- **`is_recid`** : Il s'agit d'une variable binaire indiquant si un individu a récidivé (`1`) ou non (`0`).\n",
+    "Cette colonne représente donc l’étiquette à prédire dans un cadre de classification binaire.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5b5df0ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   priors_count  is_recid  sex_Female  sex_Male  age_cat_25 - 45  \\\n",
+      "0             0         0       False      True            False   \n",
+      "1             0         0       False      True            False   \n",
+      "2             0         1       False      True             True   \n",
+      "3             4         1       False      True            False   \n",
+      "4             4         1       False      True            False   \n",
+      "\n",
+      "   age_cat_Greater than 45  age_cat_Less than 25  race_African-American  \\\n",
+      "0                     True                 False                  False   \n",
+      "1                     True                 False                  False   \n",
+      "2                    False                 False                   True   \n",
+      "3                    False                  True                   True   \n",
+      "4                    False                  True                   True   \n",
+      "\n",
+      "   race_Asian  race_Caucasian  race_Hispanic  race_Native American  race_Other  \n",
+      "0       False           False          False                 False        True  \n",
+      "1       False           False          False                 False        True  \n",
+      "2       False           False          False                 False       False  \n",
+      "3       False           False          False                 False       False  \n",
+      "4       False           False          False                 False       False  \n"
+     ]
+    }
+   ],
    "source": [
     "# Show the first few rows to check the structure of the data\n",
     "print(df.head())"
@@ -109,10 +159,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "39b99804",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 10542 entries, 0 to 10541\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                   Non-Null Count  Dtype\n",
+      "---  ------                   --------------  -----\n",
+      " 0   priors_count             10542 non-null  int64\n",
+      " 1   is_recid                 10542 non-null  int64\n",
+      " 2   sex_Female               10542 non-null  bool \n",
+      " 3   sex_Male                 10542 non-null  bool \n",
+      " 4   age_cat_25 - 45          10542 non-null  bool \n",
+      " 5   age_cat_Greater than 45  10542 non-null  bool \n",
+      " 6   age_cat_Less than 25     10542 non-null  bool \n",
+      " 7   race_African-American    10542 non-null  bool \n",
+      " 8   race_Asian               10542 non-null  bool \n",
+      " 9   race_Caucasian           10542 non-null  bool \n",
+      " 10  race_Hispanic            10542 non-null  bool \n",
+      " 11  race_Native American     10542 non-null  bool \n",
+      " 12  race_Other               10542 non-null  bool \n",
+      "dtypes: bool(11), int64(2)\n",
+      "memory usage: 360.3 KB\n"
+     ]
+    }
+   ],
    "source": [
     "# Display the structure of the dataset\n",
     "df.info() "
@@ -120,10 +197,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8952a753",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       priors_count      is_recid\n",
+      "count  10542.000000  10542.000000\n",
+      "mean       4.099507      0.473629\n",
+      "std        5.380332      0.499328\n",
+      "min        0.000000      0.000000\n",
+      "25%        1.000000      0.000000\n",
+      "50%        2.000000      0.000000\n",
+      "75%        6.000000      1.000000\n",
+      "max       43.000000      1.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Display the summary statistics of the dataset\n",
     "print(df.describe())  "
@@ -131,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3308d4b7",
    "metadata": {},
    "outputs": [],
@@ -156,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a6ceb88e",
    "metadata": {},
    "outputs": [],
@@ -188,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9768f507",
    "metadata": {},
    "outputs": [],
@@ -207,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f969efdf",
    "metadata": {},
    "outputs": [],
@@ -267,7 +360,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -281,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
